[package]
name = "esf-dogma-engine"
version = "0.0.0-git"
authors = ["EVEShipFit Team <info@eveship.fit>"]
edition = "2021"
repository = "https://github.com/EVEShipFit/dogma-engine"
description = "Library to calculate statistics for EVE Online ship fits"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde-wasm-bindgen = "0.4"
strum = "0.25"
strum_macros = "0.25"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
