[package]
name = "esf-dogma-engine"
version = "0.0.0-git"
authors = ["EVEShipFit Team <info@eveship.fit>"]
edition = "2021"
repository = "https://github.com/EVEShipFit/dogma-engine"
description = "Library to calculate statistics for EVE Online ship fits"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
strum = "0.25"
strum_macros = "0.25"

# WASM dependencies
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[profile.release]
opt-level = "s"

[features]
default = ["wasm"]
wasm = ["dep:console_error_panic_hook", "dep:serde-wasm-bindgen", "dep:wasm-bindgen"]
