[package]
name = "esf-dogma-engine"
version = "0.0.0-git"
authors = ["EVEShipFit Team <info@eveship.fit>"]
edition = "2021"
repository = "https://github.com/EVEShipFit/dogma-engine"
description = "Library to calculate statistics for EVE Online ship fits"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
strum = "0.25"
strum_macros = "0.25"

# "rust" dependencies
clap = { version = "4.5", features = ["derive"], optional = true }
prost = { version = "0.13", optional = true }
serde_json = { version = "1.0", optional = true }

# "wasm" dependencies
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = "s"

[features]
default = ["eft", "rust", "wasm"]
eft = []
rust = ["dep:clap", "dep:prost", "dep:serde_json"]
wasm = ["dep:console_error_panic_hook", "dep:serde-wasm-bindgen", "dep:wasm-bindgen"]
